--- a/JustEatIt.FoodAPI/JustEatIt.FoodAPI.csproj
+++ b/JustEatIt.FoodAPI/JustEatIt.FoodAPI.csproj
@@ -12,10 +12,14 @@
     <PackageReference Include="HotChocolate.AspNetCore" Version="13.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.5" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.2" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.6" />
+    <PackageReference Include="MongoDB.Bson" Version="2.19.1" />
+    <PackageReference Include="MongoDB.Driver" Version="2.19.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Controllers" />
     <Folder Include="Controllers\" />
     <Folder Include="Models\" />
     <Folder Include="Infrastructure\" />
