--- a/JustEatIt.DrinkAPI/JustEatIt.DrinkAPI.csproj
+++ b/JustEatIt.DrinkAPI/JustEatIt.DrinkAPI.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="HotChocolate.AspNetCore" Version="13.0.5" />
+    <PackageReference Include="HotChocolate.Data" Version="13.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.5" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.2" />
     <PackageReference Include="MongoDB.Bson" Version="2.19.1" />
