--- a/JustEatIt.FoodAPI/JustEatIt.FoodAPI.csproj
+++ b/JustEatIt.FoodAPI/JustEatIt.FoodAPI.csproj
@@ -6,6 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>5c2c1d87-0c3b-4442-882d-061348bc35ca</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <ErrorOnDuplicatePublishOutputFiles>false</ErrorOnDuplicatePublishOutputFiles>
+
   </PropertyGroup>
 
   <ItemGroup>
