--- a/JustEatIt.OrderAPI/appsettings.json
+++ b/JustEatIt.OrderAPI/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "JustEatItDatabase": {
+    "ConnectionString": "mongodb+srv://MathiasKristensen99:phkg!e!g3C7n6CY@easv.i3hgs.mongodb.net/JustEatIt?retryWrites=true&w=majority",
+    "DatabaseName": "JustEatIt",
+    "OrdersCollectionName": "Orders"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
