--- a/JustEatIt.FoodAPI/JustEatIt.FoodAPI.csproj
+++ b/JustEatIt.FoodAPI/JustEatIt.FoodAPI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -13,6 +13,7 @@
   <ItemGroup>
     <PackageReference Include="HotChocolate.AspNetCore" Version="13.0.5" />
     <PackageReference Include="HotChocolate.Data" Version="13.0.5" />
+    <PackageReference Include="HotChocolate.Stitching" Version="13.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.5" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.2" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.6" />
@@ -23,7 +24,6 @@
 
   <ItemGroup>
     <Folder Include="Controllers" />
-    <Folder Include="Controllers\" />
     <Folder Include="Models\" />
     <Folder Include="Infrastructure\" />
     <Folder Include="Services\" />
